--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progate</title>
+    <title>Codridge</title>
     <link rel="stylesheet" href="stylesheet.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
@@ -22,6 +22,8 @@
         <div class="header-right">
           <a href="#">Lessons</a>
           <a href="#" class="login">Log in</a>
+          <a href="#" class="AboutUs">About Us</a>
+          <a href="#" class="faqs">FAQs</a>
         </div>
       </div>
     </header>
