--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <!-- Top -->
     <div class="top-wrapper">
       <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
+        <h1>Bridging the gap between you and coding. </h1>
+        <h1>.</h1>
+        <p>It takes both sides to build a bride.</p>
         <p>
-          We offer you a fully equipped coding environment to get you started.
+          Since you are here we will hold our end of the bargain.
+          
         </p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
